// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message {"Icon": [Object], "timerValue": 5} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafdff",
        "borderColor": "#4496e8",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#4496e8",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <Timer
        countFrom={5}
      />
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message {"Icon": [Object]} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafdff",
        "borderColor": "#4496e8",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#4496e8",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#4496e8"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282685160,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message {"body": [Object], "caption": "caption", "severity": "info", "style": [Object]} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafdff",
        "borderColor": "#4496e8",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      {
        "margin": 10,
      },
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#4496e8",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#4496e8"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282685160,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M12 9h.01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M11 12h1v4h1"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
        <Caption
          testID="Caption"
        >
          caption
        </Caption>
      </View>
    </View>
    <View
      testID="Body"
    >
      <View>
        body
      </View>
    </View>
  </View>
</View>
`;

exports[`Message {"body": [Object], "footer": [Object], "severity": "warning"} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fffdfa",
        "borderColor": "#f5b83d",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#f5b83d",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#f5b83d"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294293565,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M12 9v4"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294293565,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294293565,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M12 16h.01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294293565,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
    <View
      testID="Body"
    >
      <View>
        body
      </View>
    </View>
    <View>
      footer
    </View>
  </View>
</View>
`;

exports[`Message {"closeLabel": "Close", "footer": [Object], "onClose": [Function mockConstructor], "severity": "success"} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafffb",
        "borderColor": "#44e858",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#44e858",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#44e858"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282706008,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282706008,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M9 12l2 2l4 -4"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282706008,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#1dc831",
              "borderRadius": 14,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 8,
              "height": "auto",
              "justifyContent": "center",
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            false,
          ]
        }
        testID="CloseButton"
      >
        <Text
          style={
            {
              "color": "#1dc831",
              "fontFamily": "TT Fellows",
              "fontSize": 14,
              "fontWeight": 600,
              "includeFontPadding": false,
              "verticalAlign": "middle",
            }
          }
          testID="Button_Text"
        >
          Close
        </Text>
      </View>
    </View>
    <View>
      footer
    </View>
  </View>
</View>
`;

exports[`Message {"footer": [Object], "onClose": [Function mockConstructor], "severity": "success"} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafffb",
        "borderColor": "#44e858",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#44e858",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#44e858"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282706008,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282706008,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M9 12l2 2l4 -4"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282706008,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#1dc831",
              "borderRadius": 14,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 8,
              "height": "auto",
              "justifyContent": "center",
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            },
            {
              "aspectRatio": 1,
            },
          ]
        }
        testID="CloseButton"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="none"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#1dc831"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="Button_Icon"
          vbHeight={24}
          vbWidth={24}
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4280141873,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M18 6l-12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4280141873,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="Button_Icon"
            />
            <RNSVGPath
              d="M6 6l12 12"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4280141873,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="Button_Icon"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View>
      footer
    </View>
  </View>
</View>
`;

exports[`Message {"hiddenIcon": false} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafdff",
        "borderColor": "#4496e8",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#4496e8",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#4496e8"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282685160,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M12 9h.01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M11 12h1v4h1"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message {"onTimerFinish": [Function mockConstructor], "timerValue": 5} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafdff",
        "borderColor": "#4496e8",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#4496e8",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <Timer
        countFrom={5}
        onFinish={[MockFunction]}
      />
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message {"severity": "danger"} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fffafa",
        "borderColor": "#e85244",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#e85244",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#e85244"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293415492,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4293415492,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M12 8v4"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4293415492,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M12 16h.01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4293415492,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message {} 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "backgroundColor": "#fafdff",
        "borderColor": "#4496e8",
        "borderRadius": 14,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="MessageContainer"
>
  <View
    style={
      {
        "borderColor": "#4496e8",
        "borderLeftWidth": 3,
        "flexGrow": 1,
        "gap": 14,
        "padding": 14,
        "paddingLeft": 18,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 14,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={36}
        bbWidth={36}
        fill="none"
        focusable={false}
        height={36}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#4496e8"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 36,
              "width": 36,
            },
          ]
        }
        testID="Icon"
        vbHeight={24}
        vbWidth={24}
        width={36}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4282685160,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M12 9h.01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
          <RNSVGPath
            d="M11 12h1v4h1"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4282685160,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="Icon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Body
          base={true}
          testID="Title"
          weight="bold"
        >
          Message
        </Body>
      </View>
    </View>
  </View>
</View>
`;
